--- a/scss/partials/_SCSscheme.scss
+++ b/scss/partials/_SCSscheme.scss
@@ -3,12 +3,15 @@
 #SCSscheme-title {
     padding: 100px 0;
     font-size: 30px;
+    align-self: center;
 }
 
 #SCSscheme {
     display: flex;
     flex-direction: column;
     margin-bottom: 50px;
+    align-self: center;
+    align-items: center;
 }
 
 .SCSscheme--card {
@@ -57,17 +60,13 @@
     }
   }
 
-  @media screen and (min-width:1400px) {
-      #SCSscheme {
-          flex-direction: row;
-          padding-left: 160px;
-          margin: 20px 0 20px 0;
-      }
+@media screen and (min-width:1400px) {
+    #SCSscheme {
+        padding-left: 160px;
+        margin: 20px 0 20px 0;
+    }
 
-      .SCSscheme--card {
-          margin: 20px 0 20px 8%;
-      }
-  }
-
-
-  //Maybe add a scale to the cards to make them bigger and more central for easier reading.
+    .SCSscheme--card {
+        margin: 20px 0 20px 8%;
+    }
+}
