--- a/style.css
+++ b/style.css
@@ -268,13 +268,16 @@ header {
 .projects {
   width: 100%;
   display: flex;
-  flex-direction: column;
   justify-content: space-around;
-  padding: 0 25px;
+  padding: 75px 0 0;
 }
 
-.projects-mainpage {
-  margin: 75px 0 0;
+.projects-container {
+  width: 1400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 0 10px;
 }
 
 .project {
@@ -370,21 +373,8 @@ header {
     width: calc(99% - 163px);
     margin-left: 160px;
   }
-
-  .project {
-    margin-left: 5px;
-  }
 }
-@media screen and (min-width: 955px) {
-  #project-one,
-#project-two,
-#project-three,
-#project-four,
-#project-five,
-#project-six {
-    margin-left: 10px;
-  }
-
+@media screen and (min-width: 1200px) {
   #projects {
     display: flex;
     -moz-columns: 2;
@@ -392,41 +382,27 @@ header {
     flex-direction: row;
     flex-wrap: wrap;
   }
-}
-@media screen and (min-width: 992px) {
-  #project-two,
-#project-five {
-    margin-left: 5px;
-    margin-right: 0;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .project-mainpage {
+
+  .project {
     flex-basis: 450px;
-  }
-}
-@media screen and (min-width: 1571px) {
-  #project-one,
-#project-two,
-#project-three,
-#project-four,
-#project-five,
-#project-six {
-    margin-left: 10px;
   }
 }
 #contact-area {
   padding: 100px 0 0 0;
+  justify-content: space-around;
+  align-content: center;
+  align-items: center;
+  display: flex;
 }
 
 #contact--area {
   display: flex;
   flex-direction: column;
-  padding: 0 20px 0 20px;
   justify-content: space-between;
   text-align: left;
-  max-width: 1200px;
   align-self: center;
+  max-width: 1400px;
+  margin: 0 10px;
 }
 #contact--area h2 {
   font-size: 40px;
@@ -529,8 +505,21 @@ header {
     font-size: 20px;
   }
 
+  #contact-area {
+    width: calc(99% - 163px);
+    margin-left: 160px;
+    margin-right: auto;
+  }
+
   .contact-area-container {
     padding-left: 30px;
+    flex-basis: 700px;
+    flex-grow: 1;
+  }
+
+  #contact-form {
+    flex-basis: 700px;
+    flex-grow: 1;
   }
 
   #scroll-up {
@@ -544,13 +533,6 @@ header {
   }
 }
 @media screen and (min-width: 992px) {
-  #contact-area {
-    width: 100%;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-  }
-
   #contact--area {
     flex-direction: row;
   }
@@ -560,6 +542,11 @@ header {
   #contact--area #contact-area-container,
 #contact--area #contact-form {
     width: 50%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  #contact--area {
+    padding: 0 10px;
   }
 }
 #about-page {
@@ -635,7 +622,6 @@ header {
   flex-direction: column;
   margin-bottom: 50px;
   align-self: center;
-  align-items: center;
 }
 
 .SCSscheme--card {
