fixed a new issue with the scheme page

--- a/scss/partials/_SCSscheme.scss
+++ b/scss/partials/_SCSscheme.scss
@@ -23,7 +23,7 @@
 }
 
 .SCSscheme--card {
-    width: 80%;
+    width: 80vw;
     margin: 20px 0 20px;
     background-color: $tertiary-color;
     padding: 30px;
