changed rules forthe scheme page

--- a/style.css
+++ b/style.css
@@ -637,7 +637,7 @@ header {
 }
 
 .SCSscheme--card {
-  width: 80%;
+  width: 80vw;
   margin: 20px 0 20px;
   background-color: #11CCED;
   padding: 30px;
