--- a/scss/partials/_SCSscheme.scss
+++ b/scss/partials/_SCSscheme.scss
@@ -18,13 +18,14 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 50px;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    width: 100%;
 }
 
 .SCSscheme--card {
-    width: 80vw;
-    margin: 20px 0 20px;
+    flex-basis: 260px;
+    margin: 20px 50px 20px;
     background-color: $tertiary-color;
     padding: 30px;
     border-radius: 13px;
@@ -68,6 +69,12 @@
     }
   }
 
+  @media screen and (min-width:$breakpoint-medium) {
+      .SCSscheme--card {
+          width: 80%;
+      }
+  }
+  
 @media screen and (min-width:1400px) {
 
     .SCSscheme--card {
