--- a/scss/partials/_projects.scss
+++ b/scss/partials/_projects.scss
@@ -74,7 +74,7 @@
 .project-title {
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
-    margin-top: 180px;
+    margin-top: 160px;
     margin-bottom: 10px;
     margin-left: 8px;
     z-index: 2;
@@ -127,6 +127,12 @@
 //     }
 // }
 
+
+@media screen and (min-width:350px) {
+    .project-title {
+        margin-top: 180px;
+    }
+}
 
 @media screen and (min-width:$breakpoint-small) {
     .projects {
