--- a/style.css
+++ b/style.css
@@ -375,7 +375,7 @@ header {
 .project-title {
   font-family: "Roboto", sans-serif;
   font-size: 20px;
-  margin-top: 180px;
+  margin-top: 160px;
   margin-bottom: 10px;
   margin-left: 8px;
   z-index: 2;
@@ -408,6 +408,11 @@ header {
   background-repeat: no-repeat;
 }
 
+@media screen and (min-width: 350px) {
+  .project-title {
+    margin-top: 180px;
+  }
+}
 @media screen and (min-width: 576px) {
   .projects {
     width: calc(99% - 163px);
