Added a coding example and stlyed it.

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -10,6 +10,7 @@ $alt-fill-color: #000000;
 $linkedin-color: #0E76A8;
 $github-color: #24292E;
 
+$coding-background: #272822;
 
 // media query variables
 
