Added fixes noted by scions

--- a/scss/partials/_coding.scss
+++ b/scss/partials/_coding.scss
@@ -93,6 +93,15 @@
     padding-bottom: 50px;
     display: flex;
     justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+.coding-example-button{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
 }
 
 @media screen and (min-width:$breakpoint-small) {
