Fixes applied to project cards and form names

--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -32,6 +32,14 @@
   justify-content: center;
 }
 
+#about-scheme-link{
+  text-decoration: underline;
+}
+
+#about-scheme-link:hover{
+  color: $alt-fill-color;
+}
+
 @media screen and (min-width:$breakpoint-small) {
   #about-page {
       width: calc(100% - 163px);
