--- a/scss/partials/_projects.scss
+++ b/scss/partials/_projects.scss
@@ -158,3 +158,15 @@
         flex-basis: 450px;
     }
 }
+
+@media screen and (min-width:1300px) {
+    .project {
+        flex-basis: 350px;
+    }
+}
+
+@media screen and (min-width:1560px) {
+    .project {
+        flex-basis: 450px;
+    }
+}
