--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -32,6 +32,14 @@
   justify-content: center;
 }
 
+.about-first-line{
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+.about-paragraphs{
+  margin: 15px 0;
+}
+
 #about-scheme-link{
   text-decoration: underline;
 }
