Installing a new typewriter plugin

--- a/scss/partials/_SCSscheme.scss
+++ b/scss/partials/_SCSscheme.scss
@@ -41,9 +41,9 @@
     color: $alt-fill-color;
 }
 
-.scs-left-align{
-    text-align: left;
-}
+// .scs-left-align{
+//     text-align: left;
+// }
 
 .SCSscheme--card--filler {
     color: $alt-fill-color;
