Changed jQuery plugin to work on IE

--- a/style.css
+++ b/style.css
@@ -254,8 +254,13 @@ header {
   padding: 50px 0 0;
 }
 
-.typewriter--text {
-  display: none;
+.text-typewriter-output::after {
+  content: " ";
+  -webkit-animation: pulse 1s infinite;
+          animation: pulse 1s infinite;
+  color: transparent;
+  border-right: 3px solid #ffffff;
+  margin-left: 4px;
 }
 
 @-webkit-keyframes pulse {
